# desktop-groups

./: MANIFEST.in  README.md  compile-win.bat  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml  testpypi-publish.yml
desktop-groups/: __main__.py  desktopgroups.schema.json  group.py  gui.py
src/: run.py
src/desktop-groups/: __main__.py  group.py  gui.py
src/desktop-groups/assets/json/: desktopgroups.schema.json
src/desktop-groups/assets/lang/: de.json  en.json
src/desktop_groups/: __main__.py  group.py  gui.py
src/desktop_groups/assets/json/: desktopgroups.schema.json
src/desktop_groups/assets/lang/: fr.json
